@@ -1,18 +1,13 @@
-# Titan CCP - History
+# Titan Control Center - History
 
-The [Titan Control Center Prototype](http://eprints.uni-kiel.de/43910) (CCP) is a
-scalable monitoring infrastructure for [Industrial DevOps](https://industrial-devops.org/).
+The [Titan Control Center](https://ieeexplore.ieee.org/abstract/document/8822045)
+is a scalable monitoring infrastructure for [Industrial DevOps](https://industrial-devops.org/).
 It allows to monitor, analyze and visualize the electrical power consumption of
-devices and machines in production environments such as factories.
+devices and machines in industrial production environments.
 
-This repository contains the **History** microservice of the Titan CCP.
-*Note: Formerly, this service was named Aggregation. Not all internal parts are completely renamed yet.*
+This repository contains the **History** microservice of the Titan Control Center.
 
 ## Build and Run
-
-To simply run the source code from within, e.g., Eclipse make sure to add
-`--add-modules=jdk.incubator.httpclient` as a VM argument. Otherwise you get a
-`NoClassDefFoundError` exception.
 
 We use Gradle as a build tool. In order to build the executeables run 
 `./gradlew build` on Linux/macOS or `./gradlew.bat build` on Windows. This will
@@ -20,5 +15,5 @@ create the file `build/distributions/titanccp-history.tar` which contains
 start scripts for Linux/macOS and Windows.
 
 This repository also contains a Dockerfile. Run
-`docker build -t titan-ccp-aggregation .` to create a container from it (after
+`docker build -t titan-ccp-history .` to create a container from it (after
 building it with Gradle).
